--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@tinymce/tinymce-vue": "^3.0.1",
     "axios": "^0.19.0",
+    "bus": "^0.1.0",
     "core-js": "^3.3.2",
     "element-ui": "^2.12.0",
     "mocks": "0.0.15",
