--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "mocks": "0.0.15",
     "qs": "^6.9.1",
     "tinymce": "^5.1.5",
+    "v-distpicker": "^1.2.2",
     "vue": "^2.6.10",
     "vue-axios": "^2.1.5",
     "vue-router": "^3.1.3",
